# love-vita

./: build-vita.sh  readme.md
platform/vita/: Makefile.am  automagic  configure.ac  genmodules  love.desktop
platform/vita/debian/: love-unstable.manpages  love.manpages  rules  rules.in
src/: Makefile  Makefile.am  Makefile.in  love.cpp
src/.deps/: love.Po
src/common/: config.h  memory.cpp
src/common/.deps/: Data.Plo  Exception.Plo  Matrix.Plo  Module.Plo  Object.Plo  Reference.Plo  Stream.Plo  StringMap.Plo  Variant.Plo  Vector.Plo  android.Plo  b64.Plo  delay.Plo  deprecation.Plo  floattypes.Plo  memory.Plo  pixelformat.Plo  runtime.Plo  types.Plo  utf8.Plo
src/libraries/Wuff/.deps/: wuff.Plo  wuff_convert.Plo  wuff_internal.Plo  wuff_memory.Plo
src/libraries/ddsparse/.deps/: ddsparse.Plo
src/libraries/glad/.deps/: glad.Plo
src/libraries/lodepng/.deps/: lodepng.Plo
src/libraries/lua53/.deps/: lstrlib.Plo  lutf8lib.Plo
src/libraries/luasocket/libluasocket/: inet.c  options.c  serial.c  unixudp.c
src/libraries/lz4/.deps/: lz4.Plo  lz4hc.Plo
src/libraries/noise1234/.deps/: noise1234.Plo  simplexnoise1234.Plo
src/libraries/physfs/: physfs_platform_vita.c  physfs_platforms.h
src/libraries/physfs/.deps/: physfs.Plo  physfs_archiver_7z.Plo  physfs_archiver_dir.Plo  physfs_archiver_grp.Plo  physfs_archiver_hog.Plo  physfs_archiver_iso9660.Plo  (+18 more)
src/libraries/tinyexr/: tinyexr.h
src/modules/filesystem/: DroppedFile.cpp  Filesystem.cpp
src/modules/love/: boot.lua
src/modules/system/: System.cpp
src/modules/thread/: threads.cpp
(+302 files in other folders)
